--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,16 @@
-
+@import url(pexels-dmitry-varennikov-2735069-3240x2160-15fps.mp4);
 body, html {
     height: 100%;
-    font-family: var(--font-body-text);
-    color: #080e12;
+    color: #000000;
     font-weight: 400;
-    line-height: 1.75;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
+    font-family: Georgia;
+    font-size: 1rem;
+    line-height: 1.75rem;
+    text-underline-offset: 0.2rem;
   }
+.t5 {
+  background-color: #a02ed4;
+}
 .t4 {
     background-color: #6b5ace;
 }
@@ -27,31 +30,45 @@ body, html {
     outline: none;
     cursor: pointer;
     padding: 14px 16px;
-    font-size: 20px;
-    width: 25%;
+    font-size: 16px;
+    width: 20%;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;;
     font-weight: 800;
+    flex-shrink:inherit;
+    position: relative;
   }  
   * {
     box-sizing: border-box;
   }
 h1 {
     font-size : 20px;
+    text-align: center;
+    font-family: fantasy;
+    color: #25186e;
 }
-.bg-img {
-  /* The image used */
-  margin-top: 0px;
-  background-image: url("Steven-Universe-Wallpapers.png");
+.showcase{
+  margin-top : 49px;
+  width : 100%;
+  height : 80%;
+  position: absolute;
+}
+.showcase video {
+  width : 100%;
+  height: 100%;
+  position : relative;
+  object-fit: cover;
+}
+section h1 {
+  position : absolute;
+  top:0;
+  left :0;
+  width : 100%;
+  height: 100;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-transform: uppercase;
 
-  /* Control the height of the image */
-  min-height: 66%;
-
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position:relative;
-  font-family: raleway,serif;
 }
   
   /* Add styles to the form container */
@@ -59,10 +76,10 @@ h1 {
     position: absolute;
     right: 0;
     margin : 1.5rem;
-    margin-top : 4.6rem;
+    margin-top : 8rem;
     max-width: 280px;
     padding: 1em;
-    background-color: rgba(253, 211, 171, 0.856);
+    background-color: rgba(255, 230, 206, 0.767);
     font-family:  raleway,serif;
   }
   
@@ -81,14 +98,7 @@ h1 {
     background-color: #ddd;
     outline: none;
   }
-  #myVideo {
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  min-width: 100%;
-  min-height: 100%;
-  object-fit: cover;
-}
+ 
   /* Set a style for the submit button */
   .btn {
     background-color: #4b0dbd91;
@@ -98,6 +108,7 @@ h1 {
     cursor: pointer;
     width: 100%;
     opacity: 0.9;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   }
   
   .btn:hover {
@@ -127,7 +138,52 @@ h1 {
     display: none;
     padding: 100px 20px;
     height: 100%;
+    position: absolute;
+    margin-left :17%;
+    margin-right : 17%;
+    padding-top: 300px;
   }
+
 section {
   margin: 0px;
+}
+h3 {
+  margin-top : -50px;
+  font-weight: 900;
+  font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+@font-face {
+  font-family: myFirstFont;
+  src: url(Lamarkie.otf);
+}
+
+.bottom-left {
+  font-family: myFirstFont;
+}
+@font-face {
+  font-family: myFirstFont;
+  src: url(Lamarkie.otf);
+  font-weight: bold;
+}
+.bg-img {
+  /* The image used */
+
+
+  /* Control the height of the image */
+  min-height: 380px;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+.bottom-left {
+  position: absolute;
+  bottom: 100px;
+  left: 70px;
+  color:#ddd;
+  font-size : 60px;
+  font-weight :900;
 }
