--- a/styles.css
+++ b/styles.css
@@ -58,18 +58,7 @@ h1 {
   position : relative;
   object-fit: cover;
 }
-section h1 {
-  position : absolute;
-  top:0;
-  left :0;
-  width : 100%;
-  height: 100;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  text-transform: uppercase;
 
-}
   
   /* Add styles to the form container */
   .container {
@@ -79,7 +68,7 @@ section h1 {
     margin-top : 8rem;
     max-width: 280px;
     padding: 1em;
-    background-color: rgba(255, 230, 206, 0.767);
+    background-color: rgba(250, 223, 198, 0.767);
     font-family:  raleway,serif;
   }
   
@@ -181,9 +170,31 @@ h3 {
 }
 .bottom-left {
   position: absolute;
-  bottom: 100px;
-  left: 70px;
+  left: 100px;  
   color:#ddd;
-  font-size : 60px;
   font-weight :900;
+  flex-direction: column;
+  text-align: left;
+  max-width : 60%;
+  flex-shrink: 3;
+}
+@font-face {
+  font-family: myFirstFont1;
+  src: url(VintageGlamour-Regular.ttf);
+  font-weight: bold;  
+}
+@font-face {
+  font-family: myFirstFont1;
+  src: url(VintageGlamour-Regular.ttf);
+  font-weight: bold;
+}
+.bottom-left p{
+  font-size : 18px;
+  font-family:myFirstFont1;
+  font-weight: 200;
+
+}
+
+h1 {
+  top:200px;
 }
