--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body, html {
     padding: 14px 16px;
     font-size: 16px;
     width: 20%;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;;
+    font-family:myNewFont;
     font-weight: 800;
     flex-shrink:inherit;
     position: relative;
@@ -43,11 +43,11 @@ body, html {
 h1 {
     font-size : 20px;
     text-align: center;
-    font-family: fantasy;
-    color: #25186e;
+    font-family: myNewFont;
+    color: #e3ddec;
 }
 .showcase{
-  margin-top : 49px;
+  margin-top : 46px;
   width : 100%;
   height : 80%;
   position: absolute;
@@ -68,8 +68,9 @@ h1 {
     margin-top : 8rem;
     max-width: 280px;
     padding: 1em;
-    background-color: rgba(250, 223, 198, 0.767);
+    background-color: rgba(68, 51, 148, 0.3);
     font-family:  raleway,serif;
+    border-radius: 20px;color:#ddc6a4;
   }
   
   /* Full-width input fields */
@@ -81,6 +82,7 @@ h1 {
     background: #f1f1f1;
     height : 20px;
     font-family: raleway,serif;
+    
   }
   
   input[type=number]:focus, input[type=text]:focus {
@@ -97,7 +99,8 @@ h1 {
     cursor: pointer;
     width: 100%;
     opacity: 0.9;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    border-radius : 20px;
+    font-family:mynewfont1;
   }
   
   .btn:hover {
